<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <artifactId>jackpotGame</artifactId>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.4.0</version>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>am.devvibes.JackpotGame</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <groupId>org.apache.maven.plugins</groupId>
                <version>${maven-jar-version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
                <groupId>org.apache.maven.plugins</groupId>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <artifactId>logback-classic</artifactId>
            <groupId>ch.qos.logback</groupId>
            <scope>compile</scope>
            <version>${logback-version}</version>
        </dependency>
        <dependency>
            <artifactId>lombok</artifactId>
            <groupId>org.projectlombok</groupId>
            <version>${lombok-version}</version>
        </dependency>
        <dependency>
            <artifactId>jackson-databind</artifactId>
            <groupId>com.fasterxml.jackson.core</groupId>
            <version>${jackson-version}</version>
        </dependency>
        <dependency>
            <artifactId>junit-jupiter</artifactId>
            <groupId>org.junit.jupiter</groupId>
            <scope>test</scope>
            <version>${junit-version}</version>
        </dependency>
        <dependency>
            <artifactId>mockito-core</artifactId>
            <groupId>org.mockito</groupId>
            <scope>test</scope>
            <version>${mockito-version}</version>
        </dependency>

    </dependencies>
    <groupId>am.devvibes</groupId>

    <modelVersion>4.0.0</modelVersion>
    <name>jackpotGame</name>
    <packaging>jar</packaging>
    <properties>
        <jackson-version>2.17.2</jackson-version>
        <junit-version>5.10.2</junit-version>
        <logback-version>1.5.18</logback-version>
        <lombok-version>1.18.38</lombok-version>
        <maven-jar-version>3.3.0</maven-jar-version>
        <mockito-version>5.12.0</mockito-version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <url>http://maven.apache.org</url>
    <version>1.0-SNAPSHOT</version>

</project>
